@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>页面不存在</title>
   <style>
     body {
@@ -25,7 +25,7 @@
       overflow: hidden;
       position: absolute;
       background-image:
-        url('http://7xpzn8.com1.z0.glb.clouddn.com/魔法使いの夜.jpg');
+        url("http://7xpzn8.com1.z0.glb.clouddn.com/魔法使いの夜.jpg");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
