@@ -1,3 +1,6 @@
+v2016-01-29
+  * Enable Baidu Tongji
+
 v2016-01-19.3
   * Rename server.sh
 
